changes to internal classes/APIs to support non-JDBC parameters for StoredProcedures